--- a/Act-2.2/Act-2.2.2/accordeon.css
+++ b/Act-2.2/Act-2.2.2/accordeon.css
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+/* 
 .wrapper {
     display: grid;
     grid-template-columns: repeat(3,1fr) ;
@@ -54,7 +54,8 @@
   .k { background: white;
     grid-column: 1/3;
     grid-row: 16/ 21;
-=======
+  }
+======= */
 .wrapper {
     display: grid;
     grid-template-columns: repeat(3,1fr) ;
@@ -62,6 +63,7 @@
     grid-gap: 5px;
 
   }
+  
   .a {
     background: red;
     grid-column: 1 / span 3 ;
@@ -72,12 +74,10 @@
     grid-column: 1 / span 3;
     grid-row: 2/4;
   }
-
-
-
   .c { background: yellow;
     grid-column: 1;
     grid-row: 4/ 7;
+    
   }
   .d { background: yellow;
     grid-column: 2;
@@ -100,7 +100,7 @@
     grid-row: 8/14;
   }
   .i{ background: pink;
-    grid-column: 1/2;
+    grid-column: 1/3;
     grid-row: 10/16;
   }
   .j { background: white;
@@ -110,5 +110,129 @@
   .k { background: white;
     grid-column: 1/3;
     grid-row: 16/ 21;
->>>>>>> 9798c7e615b5aec74a7897e216696de5057e7f22
+
+  }
+
+
+   @media (min-width: 426px) and (max-width: 768px) {
+    .a {
+      background: red;
+      grid-column: 1 / span 3 ;
+      grid-row: 1;
+    }
+    
+    .d {
+      display: none;
+    }
+    .e{
+      display: none;
+    }
+    .f{
+      display: none;
+    }
+    .k{
+      display: none;
+    }
+    .b {
+      background: orange;
+      grid-column-start:1;
+      grid-column-end: 3;
+    }
+    .c {
+      background: yellow;
+      grid-column-start: 1;
+      grid-column-end: 4;
+      grid-row-end:7;
+      grid-row-start: 4;
+    }
+    .g {
+      background:  green;
+      grid-column-start: 3;
+      grid-column-end: 3;
+      grid-row-end: 4;
+      grid-row-start: 2;
+    }
+    .h {
+      background:blue;
+      grid-row-end: 15;
+      grid-row-start: 12;
+      grid-column-start: 1;
+      grid-column-end: 4;
+    }
+    .i{
+      grid-row-end: 12;
+      grid-row-start:7;
+      grid-column-start: 1;
+      grid-column-end: 4;
+    }
+    
+  }
+   
+  @media (min-width: 5px) and (max-width: 425px) {
+    .grid-container {
+      grid-template-rows: 50px 150px 150px 150px 150px 150px;
+      grid-template-columns: 425px;
+    }
+   .a {
+      background: red;
+        grid-row-end: 2;
+      grid-row-start: 1;
+      grid-column-start: 1;
+      grid-column-end: 4;
+    }
+ .b{
+       background: orange;
+        grid-row-end:8 ;
+      grid-row-start: 5;
+      grid-column-start: 1;
+      grid-column-end: 4;
+    }
+  
+ .c {
+      background: yellow;
+      grid-column-start: 1;
+      grid-column-end: 4;
+      grid-row-end:5;
+      grid-row-start: 2;
+    }
+
+  .d {
+      display: none;
+    }
+  .e {
+      display: none;
+    }
+  .f {
+      display: none;
+    }
+  
+    .g {
+       background:  green;
+      grid-row-end: 11;
+      grid-row-start: 8;
+      grid-column-start: 1;
+      grid-column-end: 4;
+    }
+  
+    .h{
+       background:blue;
+      grid-row-start: 14;
+      grid-row-end: 17;
+      grid-column-start: 1;
+      grid-column-end: 4;
+    }
+  
+  .i{background: pink;
+      grid-row-end:14;
+      grid-row-start:11;
+      grid-column-start: 1;
+      grid-column-end: 4;
+    }
+
+    .k{
+      display: none;
+    }
+    .j{
+      display: none;
+    }
   }
