--- a/Act-2.3.1/style.css
+++ b/Act-2.3.1/style.css
@@ -1,10 +1,11 @@
- nav{
+ .nav-top{
     border-bottom: 1px solid rgb(233, 231, 231);
     padding: 15px 0px;
     display: flex;
     justify-content: space-around;
+    background-color: #fff;
 }
-
+ 
 .search{
      border: 1px solid rgb(233, 231, 231) ;
      display: flex;
@@ -67,3 +68,52 @@
     color: #878281;
     background: rgb(200, 198, 198);
   }
+
+
+  .logo-nav{
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    gap:70px;
+    /* align-items: center; */
+    align-content: center;
+}
+
+.logo{
+    opacity: 0.6;
+    }
+.nav-link{
+    display: flex !important;
+    color: rgba(0, 0, 0, 0.575) !important;
+    font-size: small !important;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+
+
+
+
+
+  .card-image{
+    height: 210px;
+    width: 210px;
+}
+.footer-content{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin:2rem;
+    position: sticky;
+    font-size: small;
+}
+.nav-bottom{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    background-color: white;
+}
