--- a/Act-2.3.1/exemple.css
+++ b/Act-2.3.1/exemple.css
@@ -1,4 +1,4 @@
- .nav-top{
+.nav-top{
     border-bottom: 1px solid rgb(233, 231, 231);
     padding: 15px 0px;
     display: flex;
@@ -92,26 +92,48 @@
     align-items: center;
     align-content: center;
 }
-.right-side{   
-    gap:70px;
-    /* margin-top: 1rem; */
-    padding: 1rem;
-     justify-content: space-between;
-   align-items: center;}
 
-.card{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width:200px}
-
-
-  .card-image{
-    height: 200px;
-    width: 200px;
-    border-radius: 20px 20px;
-    align-items: center;
+.texte1 {
+    margin-top : 50px ; 
 }
+
+
+.top-page {
+    display: flex;
+    flex-direction:row;
+    gap:10px;
+    margin:2rem;
+    padding:2rem;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: -60px;
+  }
+
+ .deux-img{   
+     gap:10px;
+      margin-top: 9.5rem; 
+    }
+     .image3{
+        margin-top: 0.5rem; 
+     }
+ 
+     .image5{
+        margin-top: 0.5rem; 
+     }
+ 
+   
+    .right-side{display: flex;
+        flex-direction: row;
+        gap:10px;
+        margin:2rem;
+        padding:2rem;
+        justify-content: space-between;
+        align-items: center;} 
+
+    
+
+
+
 .footer-content{
     display: flex;
     flex-direction: row;
@@ -120,11 +142,6 @@
     position: sticky;
     font-size: small;
 }
-.nav-bottom{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    background-color: white;
-}
+
+
+
