--- a/Act2.4/Act-2.4.1/nn.css
+++ b/Act2.4/Act-2.4.1/nn.css
@@ -86,7 +86,7 @@ header .right svg{
     margin-right: 10px;
     cursor:pointer;
     color: #4d4d4d;
-    outline:none;s
+    outline:none;
   }
 
 
