--- a/Act2.4/Act-2.4.2/styles/style.css
+++ b/Act2.4/Act-2.4.2/styles/style.css
@@ -107,9 +107,15 @@ nav span {
   display: inline-block;
 }
 
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .cosmo {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   margin-top: -200px;
 }
@@ -118,4 +124,24 @@ nav span {
   height: auto;
   width: 50%;
   width: 50%;
+  margin: auto;
+}
+
+.caption {
+  color: var(--color-content-quaternary, #727272);
+  font-family: nyt-imperial, georgia, "times new roman", times, serif;
+  margin: auto;
+  text-align: left;
+  display: block;
+  max-width: 900px;
+}
+
+u1 {
+  list-style: none;
+}
+
+.css-ccw2r3 {
+  flex-shrink: 1;
+  padding-right: 1rem;
+  list-style: none;
 }/*# sourceMappingURL=style.css.map */
