--- a/Act2.4/Act-2.4.1/styles/style.scss
+++ b/Act2.4/Act-2.4.1/styles/style.scss
@@ -3,8 +3,9 @@ body{
   font-family: 'Arimo', sans-serif;
   margin: 0;
   padding: 0;
+  height: 800px;
 }
- 
+
 /* Partie header */
 header{
   display:flex;
@@ -49,6 +50,7 @@ header{
   }
 
 }
+
 %shared-style {
     -webk-webkit-box-shadow: -8px -1px 19px -8px rgba(184,184,184,1);
     -moz-box-shadow: -8px -1px 19px -8px rgba(184,184,184,1);
@@ -56,6 +58,7 @@ header{
     border:none;
 }
 .main{
+ 
   display: flex;
   flex-direction: column;
   align-items:center;
@@ -94,7 +97,7 @@ label img{
     margin-top: 40px;
     button{
         padding: 10px 20px;
-        background-color: #e0e0e0;
+        background-color: #f8f9fa;
         border:none; 
         border-radius: 5px;
         margin-right: 10px;
@@ -112,3 +115,58 @@ label img{
     text-decoration: none;
 }
 /* Fin de la partie principale */
+footer
+			{
+			font-family:arial;
+			position:absolute;
+
+bottom:0;
+
+width:100%;
+
+padding-top:50px;
+
+
+			}
+.barre1
+{
+display:flex;
+justify-content:flex-start;
+width:100%;
+
+padding-top:1.5px;
+padding-bottom:1.5px;
+border-top:1px solid #e4e4e4;
+border-bottom:1px solid #e4e4e4;
+background-color:#f2f2f2;
+margin-top:222px;
+margin-right:0px;
+margin-left:0px;
+margin-bottom:0px;
+}
+.barre2
+{
+display:flex;
+justify-content:space-between;
+width:auto;
+height:auto;
+padding-top:1.5px;
+padding-bottom:1.5px;
+padding-right:30px;
+background-color:#f2f2f2;
+gap:150px;
+
+a {
+  color: #5c5c5c;
+}
+}
+.pays
+{
+display:flex;
+justify-content:flex-start;
+padding-left:30px;
+font-size:15px;
+line-height:40px;
+text-align:left;
+color:rgba(0,0,0,.54);
+}
