--- a/Act2.4/Act-2.4.2/styles/style.scss
+++ b/Act2.4/Act-2.4.2/styles/style.scss
@@ -125,18 +125,37 @@ border: 1px solid #DFDFDF;
 
 }
 
+.main{display:flex;
+    flex-direction: column;
+    align-items:center;}
 
-
-.cosmo {
-  display:flex;
-  flex-direction: row;
-  justify-content:center;
+ .cosmo {
+ display:flex;
+flex-direction: column;
+justify-content:center;
   margin-top:-200px;
   
-}
+ }
 .photo-cosmo {
   height: auto;
   width: 50%;
   width: 50%;
+  margin:auto;
  
 }
+.caption {
+    color: var(--color-content-quaternary,#727272);
+    font-family: nyt-imperial,georgia,'times new roman',times,serif;
+    margin: auto;
+    text-align: left;
+    display: block;
+    max-width: 900px;
+}
+u1 {list-style: none;
+}
+.css-ccw2r3 {
+    -webkit-flex-shrink: 1;
+    -ms-flex-negative: 1;
+    flex-shrink: 1;
+    padding-right: 1rem;
+    list-style: none; }
