--- a/Act2.4/Act-2.4.2/styles/style.scss
+++ b/Act2.4/Act-2.4.2/styles/style.scss
@@ -4,7 +4,9 @@ header{
     flex-wrap:wrap;
     justify-content:space-between;
     margin:10px 20px ;
+    margin-top: -150px;
    .left  {
+ 
     display:flex;
     flex-wrap:wrap;
     align-items: center;
@@ -20,8 +22,10 @@ header{
  .middle img{
 
     margin-left: -115px;
+    
    }
    .right .conn {
+    
     padding:  2px 10px;   
    background-color: #326891;
    border:none; 
@@ -41,6 +45,7 @@ header{
   }
 
   .space {
+    margin-top: 5px;
     font-size: 14.25px;
     font-family: nyt-franklin,helvetica,arial,sans-serif;
     font-weight: 700;
@@ -157,29 +162,22 @@ justify-content:center;
     margin-bottom: 20px;
 }
 
-.bottom{
-    border-top: 1px solid #ebebeb;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    max-width: 70%;
-    margin: auto;
-
-    a {
-color: #666;
-font-family: nyt-franklin,helvetica,arial,sans-serif;
-font-size: 3mm;
-padding: 20px 5px;
--webkit-text-decoration: none;
-text-decoration: none;
-white-space: nowrap;
-    }
-}
 
 
 .content{
     width: 600px;
     margin: auto;
+    .final-p{
+        font-size: 12px;
+        color:#666666;
+        span{
+            text-decoration: underline;
+            &:hover{
+                text-decoration: none;
+                cursor: pointer;
+            }
+        }
+    }
     img{
         width: 600px;
     }
@@ -261,9 +259,11 @@ aside{
 }
 
 
+
 body{
     margin: 30px;
     padding: 200px;
+   
     .cards-body{
         display: flex;
     }
@@ -305,6 +305,26 @@ body{
     line-height: 1.4375rem;
     }
 }
+.bottom{
+    margin-top:+100px;
+    border-top: 1px solid #ebebeb;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    max-width: 70%;
+    margin: auto;color: #666;
+
+    a {
+color: #666;
+font-family: nyt-franklin,helvetica,arial,sans-serif;
+font-size: 3mm;
+padding: 20px 5px;
+-webkit-text-decoration: none;
+text-decoration: none;
+white-space: nowrap;
+    }
+}
+
 
 .css-kdur8l {
     margin: 0px auto;
@@ -334,10 +354,10 @@ body{
     width: 150px;
   }
   .css-jxzr5i {
-    max-width: 70%;
+    max-width: 90%;
     display: flex;
-    justify-content: space-around;
-    gap:70px;
+    justify-content: space-between;
+    gap:200px;
     }
     .css-oylsik {
         display: block;
@@ -374,7 +394,7 @@ body{
                       flex-grow: 1;
                       flex-shrink: 1;
                       flex-basis: 0%;}
-                      .css-184m8ie {
+      .css-184m8ie {
                         color: rgb(86, 123, 149);
                         font-family: nyt-franklin, helvetica, arial, sans-serif;
                         font-size: 11px;
@@ -394,4 +414,22 @@ body{
                               padding-right: 3%;
                               padding-bottom: 9px;
                               padding-left: 3%;}
-                      
+                      .test{
+                        margin-top: 50px;
+                        display: flex;
+
+                        flex-direction: row;
+                        justify-content: space-between;
+                      }
+    hr .one {
+        margin-top: -10px;
+    }
+    .css-1iruc8t {
+        list-style: none;}
+        li {
+            list-style: none;
+            margin-left :-30px ;
+        }
+        .css-uw59u{
+            margin-top: 200px;
+        }
